; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/agp/extr_agp_i810.c_intel_gtt_write.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/agp/extr_agp_i810.c_intel_gtt_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.agp_i810_softc = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { void (i32, i32, i32)* }

@intel_agp = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @intel_gtt_write(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.agp_i810_softc*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @intel_agp, align 4
  %7 = call %struct.agp_i810_softc* @device_get_softc(i32 %6)
  store %struct.agp_i810_softc* %7, %struct.agp_i810_softc** %5, align 8
  %8 = load %struct.agp_i810_softc*, %struct.agp_i810_softc** %5, align 8
  %9 = getelementptr inbounds %struct.agp_i810_softc, %struct.agp_i810_softc* %8, i32 0, i32 0
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load void (i32, i32, i32)*, void (i32, i32, i32)** %13, align 8
  %15 = load i32, i32* @intel_agp, align 4
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* %4, align 4
  call void %14(i32 %15, i32 %16, i32 %17)
  ret void
}

declare dso_local %struct.agp_i810_softc* @device_get_softc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
